--- a/WebVisualizations/bootstrap and index.html bundle/index.html
+++ b/WebVisualizations/bootstrap and index.html bundle/index.html
@@ -73,7 +73,7 @@
             <div class = "row">
               <div class = "col-md-6">
                 <a href="Lat_vs_Temp.html">
-                  <img class = "img-fluid" src = "images\Fig1.png" width="300" height="300">City Latitude vs Max Temperature</img>
+                  <img class = "img-fluid" src = "../bootstrap and index.html bundle/Images/Fig1.png" width="300" height="300">City Latitude vs Max Temperature</img>
                 </a>
               </div>
               
